Fix input spacing

--- a/client/src/assets/stylesheets/LoginForm.css
+++ b/client/src/assets/stylesheets/LoginForm.css
@@ -1,5 +1,7 @@
 @import 'variables.css';
 
+/* General component styling */
+
 .login.form-container {
   display: flex;
   flex-direction: column;
@@ -178,11 +180,13 @@
 }
 
 /* Input div styling */
+
 .login.email-input,
 .login.password-input { 
   position: relative;
   width: 100%;
   height: 20%;
+  padding-bottom: 0.6250em;
 }
 
 /* Errors styling */
